# numpower

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile.frag  NOTICE  README.md  SECURITY.md  composer.json  config.m4  config.w32  numpower.c  numpower.stub.php  numpower_arginfo.h  php_numpower.h  php_phpsci_ndarray.h  phpbench.json  phpsci_ndarray.c  phpsci_ndarray.dep  phpsci_ndarray.stub.php
.github/: PULL_REQUEST_TEMPLATE.md
src/: buffer.c  buffer.dep  buffer.h  debug.c  debug.dep  debug.h  dnn.c  dnn.h  gd.h  gpu_alloc.c  gpu_alloc.h  indexing.c  indexing.dep  indexing.h  initializers.c  initializers.dep  initializers.h  iterators.c  iterators.dep  iterators.h  logic.c  logic.dep  logic.h  manipulation.c  manipulation.dep  manipulation.h  ndarray.c  ndarray.dep  ndarray.h  ndarray_ops.c  ndarray_ops.dep  ndarray_ops.h  types.c  types.dep  types.h
stubs/: numpower.stubs.php
tests/: 001-ndarray-array-phparray.phpt  001.phpt  002.phpt  003-ndarray-add.phpt  003.phpt  004-ndarray-subtract.phpt  005-ndarray-divide.phpt  010-ndarray-expm1.phpt  011-ndarray-log.phpt  013-ndarray-log1p.phpt  014-ndarray-log2.phpt  017-ndarray-min.phpt  023-ndarray-tanh.phpt  024-ndarray-abs.phpt  025-ndarray-clip.phpt  027-ndarray-sinc.phpt  028-ndarray-sqrt.phpt  029-ndarray-square.phpt  031-ndarray-fix.phpt  031-ndarray-floor.phpt  032-ndarray-rint.phpt  033-ndarray-round.phpt  035-ndarray-prod.phpt  036-ndarray-sum.phpt  037-ndarray-arccos.phpt  038-ndarray-arcsin.phpt  039-ndarray-arctan.phpt  041-ndarray-degrees.phpt  043-ndarray-sin.phpt  045-ndarray-arange.phpt  046-ndarray-identity.phpt  (+1 more)
(+103 files in other folders)
